--- a/all.bib
+++ b/all.bib
@@ -1,60 +1,350 @@
+@INPROCEEDINGS{seitz2006comparison,
+	author={Seitz, Steven and Curless, Brian and Diebel, James and Scharstein, Daniel and Szeliski, Richard},
+	booktitle={2006 IEEE Computer Society Conference on Computer Vision and Pattern Recognition (CVPR'06)},
+	title={{A Comparison and Evaluation of Multi-View Stereo Reconstruction Algorithms}},
+	year={2006},
+	volume={1},
+	pages={519--528},
+	doi={10.1109/CVPR.2006.19},
+	ISSN={1063-6919},
+	month={June},
+}
 
-@ARTICLE{SLAM1,
-author={Durrant-Whyte, H. and Bailey, Tim},
-journal={Robotics Automation Magazine, IEEE},
-title={Simultaneous localization and mapping: part I},
-year={2006},
-volume={13},
-number={2},
-pages={99-110},
-keywords={mobile robots;path planning;SLAM problem;mobile robots;simultaneous localization and mapping problem;Artificial intelligence;Bayesian methods;Buildings;History;Mobile robots;Navigation;Particle filters;Robotics and automation;Simultaneous localization and mapping;Vehicles},
-doi={10.1109/MRA.2006.1638022},
-ISSN={1070-9932},
-month={June},}
+@Inbook{koch1998multi,
+	author={Koch, Reinhard and Pollefeys, Marc and Van Gool, Luc},
+	editor={Burkhardt, Hans and Neumann, Bernd},
+	title={{Multi viewpoint stereo from uncalibrated video sequences}},
+	bookTitle={Computer Vision --- ECCV'98: 5th European Conference on Computer Vision Freiburg, Germany, June, 2--6, 1998 Proceedings, Volume I},
+	year={1998},
+	publisher={Springer Berlin Heidelberg},
+	address={Berlin, Heidelberg},
+	pages={55--71},
+	isbn={978-3-540-69354-3},
+	doi={10.1007/BFb0055659},
+	url={http://dx.doi.org/10.1007/BFb0055659},
+}
 
-@ARTICLE{SLAM2,
-author={Bailey, Tim and Durrant-Whyte, H.},
-journal={Robotics Automation Magazine, IEEE},
-title={Simultaneous localization and mapping (SLAM): part II},
-year={2006},
-volume={13},
-number={3},
-pages={108-117},
-keywords={Bayes methods;computational complexity;mobile robots;path planning;statistical distributions;computational complexity;data association;environment representation;mobile robot;probability distributions;recursive Bayesian formulation;simultaneous localization and mapping;vehicle pose;Bayesian methods;Computational complexity;Computational efficiency;Delay estimation;Mobile robots;Robotics and automation;Robustness;Simultaneous localization and mapping;Uncertainty;Vehicles},
-doi={10.1109/MRA.2006.1678144},
-ISSN={1070-9932},
-month={Sept},}
+@Article{pollefeys2004visual,
+	author={Pollefeys, Marc and Van Gool, Luc and Vergauwen, Maarten and Verbiest, Frank and Cornelis, Kurt and Tops, Jan and Koch, Reinhard},
+	title={{Visual Modeling with a Hand-Held Camera}},
+	journal={International Journal of Computer Vision},
+	year={2004},
+	volume={59},
+	number={3},
+	pages={207--232},
+	issn={1573-1405},
+	doi={10.1023/B:VISI.0000025798.50602.3a},
+	url={http://dx.doi.org/10.1023/B:VISI.0000025798.50602.3a},
+}
 
-% S-PTAM
+@Inbook{fitzgibbon1998automatic,
+	author={Fitzgibbon, Andrew and Zisserman, Andrew},
+	editor={Burkhardt, Hans and Neumann, Bernd},
+	title={{Automatic camera recovery for closed or open image sequences}},
+	bookTitle={Computer Vision --- ECCV'98: 5th European Conference on Computer Vision Freiburg, Germany, June, 2--6, 1998 Proceedings, Volume I},
+	year={1998},
+	publisher={Springer Berlin Heidelberg},
+	address={Berlin, Heidelberg},
+	pages={311--326},
+	isbn={978-3-540-69354-3},
+	doi={10.1007/BFb0055675},
+	url={http://dx.doi.org/10.1007/BFb0055675},
+}
+
+@Article{nutzi2011fusion,
+	author={N{\"u}tzi, Gabriel and Weiss, Stephan and Scaramuzza, Davide and Siegwart, Roland},
+	title={{Fusion of IMU and Vision for Absolute Scale Estimation in Monocular SLAM}},
+	journal={Journal of Intelligent {\&} Robotic Systems},
+	year={2011},
+	volume={61},
+	number={1},
+	pages={287--299},
+	issn={1573-0409},
+	doi={10.1007/s10846-010-9490-z},
+	url={http://dx.doi.org/10.1007/s10846-010-9490-z},
+}
+
+@INPROCEEDINGS{kleeman2003advanced,
+	author={Kleeman, Lindsay},
+	booktitle={Proceedings 2003 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS 2003) (Cat. No.03CH37453)},
+	title={{Advanced sonar and odometry error modeling for simultaneous localisation and map building}},
+	year={2003},
+	volume={1},
+	pages={699--704 vol.1},
+	doi={10.1109/IROS.2003.1250711},
+	month={Oct},
+}
+
+@inproceedings{abrate2007experimental,
+	title={{Experimental EKF-based SLAM for Mini-rovers with IR Sensors Only.}},
+	author={Abrate, Fabrizio and Bona, Basilio and Indri, Marina},
+	booktitle={EMCR},
+	year={2007},
+	url={http://dblp.uni-trier.de/db/conf/emcr/emcr2007.html#AbrateBI07},
+}
+
+@INPROCEEDINGS{cole2006using,
+	author={Cole, David and Newman, Paul},
+	booktitle={Proceedings 2006 IEEE International Conference on Robotics and Automation, 2006. ICRA 2006.},
+	title={{Using laser range data for 3D SLAM in outdoor environments}},
+	year={2006},
+	pages={1556--1563},
+	doi={10.1109/ROBOT.2006.1641929},
+	ISSN={1050-4729},
+	month={May},
+}
+
+@phdthesis{carlson2010mapping,
+	author={Carlson, Justin David},
+	title={{Mapping Large, Urban Environments with GPS-Aided SLAM}},
+	booktitle={},
+	school={Robotics Institute, Carnegie Mellon University},
+	month={August},
+	year={2010},
+	number={CMU-RI-TR-10-27},
+	address={Pittsburgh, PA},
+}
+
+@INPROCEEDINGS{armesto2004encoder,
+	author={Armesto, Leopoldo and Tornero, Josep},
+	booktitle={2004 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) (IEEE Cat. No.04CH37566)},
+	title={{SLAM based on Kalman filter for multi-rate fusion of laser and encoder measurements}},
+	year={2004},
+	volume={2},
+	pages={1860--1865 vol.2},
+	doi={10.1109/IROS.2004.1389668},
+	month={Sept},
+}
+
+@book{hartley2003multiple,
+	author={Hartley, Richard and Zisserman, Andrew},
+	title={{Multiple View Geometry in Computer Vision}},
+	year={2003},
+	isbn={0521540518},
+	edition={2},
+	publisher={Cambridge University Press},
+	address={New York, NY, USA},
+}
+
+@book{trucco1998introductory,
+	author={Trucco, Emanuele and Verri, Alessandro},
+	title={{Introductory Techniques for 3-D Computer Vision}},
+	year={1998},
+	isbn={0132611082},
+	publisher={Prentice Hall PTR},
+	address={Upper Saddle River, NJ, USA},
+}
+
+@book{ma2003invitation,
+	author={Ma, Yi and Soatto, Stefano and Kosecka, Jana and Sastry, Shankar},
+	title={{An Invitation to 3-D Vision: From Images to Geometric Models}},
+	year={2003},
+	isbn={0387008934},
+	publisher={SpringerVerlag},
+}
+
+@inproceedings{li2009robust,
+	author={Li, Hao and Adams, Bart and Guibas, Leonidas and Pauly, Mark},
+	title={{Robust Single-view Geometry and Motion Reconstruction}},
+	booktitle={ACM SIGGRAPH Asia 2009 Papers},
+	series={SIGGRAPH Asia '09},
+	year={2009},
+	isbn={978-1-60558-858-2},
+	location={Yokohama, Japan},
+	pages={175:1--175:10},
+	articleno={175},
+	numpages={10},
+	url={http://doi.acm.org/10.1145/1661412.1618521},
+	doi={10.1145/1661412.1618521},
+	acmid={1618521},
+	publisher={ACM},
+	address={New York, NY, USA},
+}
+
+@ARTICLE{durrant2006simultaneous,
+	author={Durrant-Whyte, Hugh and Bailey, Tim},
+	journal={IEEE Robotics Automation Magazine},
+	title={{Simultaneous localization and mapping: part I}},
+	year={2006},
+	volume={13},
+	number={2},
+	pages={99--110},
+	doi={10.1109/MRA.2006.1638022},
+	ISSN={1070-9932},
+	month={June},
+}
+
+@ARTICLE{bailey2006simultaneous,
+	author={Bailey, Tim and Durrant-Whyte, Hugh},
+	journal={IEEE Robotics Automation Magazine},
+	title={{Simultaneous localization and mapping (SLAM): part II}},
+	year={2006},
+	volume={13},
+	number={3},
+	pages={108--117},
+	doi={10.1109/MRA.2006.1678144},
+	ISSN={1070-9932},
+	month={September},
+}
+
+@ARTICLE{mur2015orb,
+	author={Mur{-}Artal, Ra{\'u}l and Montiel, Jos{\'e} M. M. and Tard{\'o}s, Juan D.},
+	journal={IEEE Transactions on Robotics},
+	title={{ORB-SLAM: A Versatile and Accurate Monocular SLAM System}},
+	year={2015},
+	volume={31},
+	number={5},
+	pages={1147--1163},
+	doi={10.1109/TRO.2015.2463671},
+	ISSN={1552-3098},
+	month={Oct},
+}
+
 @INPROCEEDINGS{pire2015,
-author = {Pire, Taihú and Fischer, Thomas and Civera, Javier and De Cristóforis, Pablo and Jacobo Berlles, Julio},
-title = {Stereo Parallel Tracking and Mapping for robot localization},
-booktitle = {International Conference on Intelligent Robots and Systems},
-year = {2015},
-address = {Hamburg, Germany},
-month = {September}
+	author={Pire, Taih{\'u} and Fischer, Thomas and Civera, Javier and {De Crist{\'o}foris}, Pablo and Berlles, Julio Jacobo},
+	booktitle={Proceedings of the IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+	title={{Stereo parallel tracking and mapping for robot localization}},
+	year={2015},
+	pages={1373--1378},
+	url={http://dx.doi.org/10.1109/IROS.2015.7353546},
+	doi={10.1109/IROS.2015.7353546},
+	month={September},
 }
 
-% Towards SPTAM
-@INPROCEEDINGS{Pire2014,
-author = {Pire, Taihú and Jacobo Berlles, Julio},
-title = {Towards a Stereo Approach to PTAM},
-booktitle = {Joint Conference on Robotics and Intelligent Systems 2014, II Workshop on MSc Dissertation and PhD Thesis in Robotics},
-year = {2014},
-address = {S\~ao Carlos, Brasil},
-month = {October}
+@INPROCEEDINGS{tan2013robust,
+	author={Tan, Wei and Liu, Haomin and Dong, Zilong and Zhang, Guofeng and Bao, Hujun},
+	booktitle={2013 IEEE International Symposium on Mixed and Augmented Reality (ISMAR)},
+	title={{Robust monocular SLAM in dynamic environments}},
+	year={2013},
+	pages={209--218},
+	doi={10.1109/ISMAR.2013.6671781},
+	month={Oct},
 }
 
-% Comparacion de descriptores en sptam
-@article{pire2015impact,
-  title={IMPACT ASSESSMENT OF IMAGE FEATURE EXTRACTORS ON THE PERFORMANCE OF SLAM SYSTEMS},
-  author={Pire, Taihú and Fischer, Thomas and Faigl, Jan},
-  journal={Acta Polytechnica CTU Proceedings},
-  volume={2},
-  number={2},
-  pages={45--50},
-  year={2015}
+@incollection{Murphy:etal:TAR13,
+	year={2013},
+	isbn={978-3-319-00064-0},
+	booktitle={Experimental Robotics},
+	volume={88},
+	series={Springer Tracts in Advanced Robotics},
+	editor={Desai, Jaydev P. and Dudek, Gregory and Khatib, Oussama and Kumar, Vijay},
+	doi={10.1007/978-3-319-00065-7_58},
+	title={{Experimental Comparison of Odometry Approaches}},
+	url={http://dx.doi.org/10.1007/978-3-319-00065-7_58},
+	publisher={Springer International Publishing},
+	author={Murphy, Liz and Morris, Timothy and Fabrizi, Ugo and Warren, Michael and Milford, Michael and Upcroft, Ben and Bosse, Michael and Corke, Peter},
+	pages={877--890},
+	language={English},
 }
+
+@Inbook{geiger2010efficient,
+	author={Geiger, Andreas and Roser, Martin and Urtasun, Raquel},
+	editor={Kimmel, Ron and Klette, Reinhard and Sugimoto, Akihiro},
+	title={{Efficient Large-Scale Stereo Matching}},
+	bookTitle={Computer Vision -- ACCV 2010: 10th Asian Conference on Computer Vision, Queenstown, New Zealand, November 8-12, 2010, Revised Selected Papers, Part I},
+	year={2011},
+	publisher={Springer Berlin Heidelberg},
+	address={Berlin, Heidelberg},
+	pages={25--38},
+	isbn={978-3-642-19315-6},
+	doi={10.1007/978-3-642-19315-6_3},
+	url={http://dx.doi.org/10.1007/978-3-642-19315-6_3},
+}
+
+@INPROCEEDINGS{kim2005gaussian,
+	author={Kim, Jangheon and Sikora, Thomas},
+	booktitle={Fifth International Conference on 3-D Digital Imaging and Modeling (3DIM'05)},
+	title={{Gaussian scale-space dense disparity estimation with anisotropic disparity-field diffusion}},
+	year={2005},
+	pages={556-563},
+	doi={10.1109/3DIM.2005.50},
+	ISSN={1550-6185},
+	month={June},
+}
+
+@inproceedings{,
+  title={PDE-based multi-view depth estimation},
+  author={Strecha, Christoph and Van Gool, Luc},
+  booktitle={3D Data Processing Visualization and Transmission, 2002. Proceedings. First International Symposium on},
+  pages={416--425},
+  year={2002},
+  organization={IEEE},
+}
+
+@INPROCEEDINGS{strecha2002pde,
+	author={Strecha, Christoph and Van Gool, Luc},
+	booktitle={Proceedings. First International Symposium on 3D Data Processing Visualization and Transmission},
+	title={{PDE-based multi-view depth estimation}},
+	year={2002},
+	pages={416-425},
+	doi={10.1109/TDPVT.2002.1024097},
+	month={},
+}
+
+@INPROCEEDINGS{chakrabarti2015low,
+	author={Chakrabarti, Ayan and Xiong, Ying and Gortler, Steven and Zickler, Todd},
+	booktitle={2015 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+	title={{Low-level vision by consensus in a spatial hierarchy of regions}},
+	year={2015},
+	pages={4009--4017},
+	doi={10.1109/CVPR.2015.7299027},
+	ISSN={1063-6919},
+	month={June},
+}
+
+@INPROCEEDINGS{yamaguchi2013robust,
+	author={Yamaguchi, Koichiro and McAllester, David and Urtasun, Raquel},
+	booktitle={2013 IEEE Conference on Computer Vision and Pattern Recognition},
+	title={{Robust Monocular Epipolar Flow Estimation}},
+	year={2013},
+	pages={1862--1869},
+	doi={10.1109/CVPR.2013.243},
+	ISSN={1063-6919},
+	month={June},
+}
+
+@Inbook{yamaguchi2014efficient,
+	author={Yamaguchi, Koichiro and McAllester, David and Urtasun, Raquel},
+	editor={Fleet, David and Pajdla, Tomas and Schiele, Bernt and Tuytelaars, Tinne},
+	title={{Efficient Joint Segmentation, Occlusion Labeling, Stereo and Flow Estimation}},
+	bookTitle={Computer Vision -- ECCV 2014: 13th European Conference, Zurich, Switzerland, September 6-12, 2014, Proceedings, Part V},
+	year={2014},
+	publisher={Springer International Publishing},
+	address={Cham},
+	pages={756--771},
+	isbn={978-3-319-10602-1},
+	doi={10.1007/978-3-319-10602-1_49},
+	url={http://dx.doi.org/10.1007/978-3-319-10602-1_49},
+}
+
+@article{kendall2017end,
+	title={{End-to-End Learning of Geometry and Context for Deep Stereo Regression}},
+	author={Kendall, Alex and Martirosyan, Hayk and Dasgupta, Saumitro and Henry, Peter and Kennedy, Ryan and Bachrach, Abraham and Bry, Adam},
+	journal={arXiv preprint arXiv:1703.04309},
+	year={2017}
+}
+
+@INPROCEEDINGS{luo2016efficient,
+	author={W. Luo and A. G. Schwing and R. Urtasun},
+	booktitle={2016 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+	title={{Efficient Deep Learning for Stereo Matching}},
+	year={2016},
+	pages={5695--5703},
+	doi={10.1109/CVPR.2016.614},
+	month={June},
+}
+
+@INPROCEEDINGS{mayer2016large,
+	author={Mayer, Nikolaus and Ilg, Eddy and H{\"a}usser, Philip and Fischer, Philipp and Cremers, Daniel and Dosovitskiy, Alexey and Brox, Thomas},
+	booktitle={2016 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+	title={{A Large Dataset to Train Convolutional Networks for Disparity, Optical Flow, and Scene Flow Estimation}},
+	year={2016},
+	pages={4040--4048},
+	doi={10.1109/CVPR.2016.438},
+	month={June},
+}
+
+#-------------------------------------------------------------------------------
 
 @INPROCEEDINGS{VODOMETRY,
 author={Nister, D. and Naroditsky, O. and Bergen, J.},
@@ -202,20 +492,20 @@ month={Nov},}
  publisher = {IEEE Computer Society},
  address = {Washington, DC, USA},
  keywords = {3D/stereo scene analysis, Autonomous vehicles, Autonomous vehicles, 3D/stereo scene analysis, tracking., tracking.}
-} 
+}
 
 % EKF Stereo SLAM system using inverse-depth and stereo features (No real-time)
-@ARTICLE{Paz:etal:TRO08, 
-author={Paz, Lina M. and Pinies, P. and Tardos, J.D. and Neira, J.}, 
-journal={IEEE Transactions on Robotics}, 
-title={{Large-Scale 6-DOF SLAM With Stereo-in-Hand}}, 
-year={2008}, 
-month={Oct}, 
-volume={24}, 
-number={5}, 
-pages={946-957}, 
-keywords={SLAM (robots);divide and conquer methods;feature extraction;image sensors;image texture;mobile robots;robot vision;stereo image processing;independent divide and conquer algorithm;large-scale 6-DOF SLAM;scale drift;simultaneous localization and mapping;stereo camera;stereo vision;textured point feature extraction;Linear time;scalability;stereo vision;visual SLAM}, 
-doi={10.1109/TRO.2008.2004637}, 
+@ARTICLE{Paz:etal:TRO08,
+author={Paz, Lina M. and Pinies, P. and Tardos, J.D. and Neira, J.},
+journal={IEEE Transactions on Robotics},
+title={{Large-Scale 6-DOF SLAM With Stereo-in-Hand}},
+year={2008},
+month={Oct},
+volume={24},
+number={5},
+pages={946-957},
+keywords={SLAM (robots);divide and conquer methods;feature extraction;image sensors;image texture;mobile robots;robot vision;stereo image processing;independent divide and conquer algorithm;large-scale 6-DOF SLAM;scale drift;simultaneous localization and mapping;stereo camera;stereo vision;textured point feature extraction;Linear time;scalability;stereo vision;visual SLAM},
+doi={10.1109/TRO.2008.2004637},
 ISSN={1552-3098}
 }
 
@@ -252,28 +542,28 @@ ISSN={1552-3098}
 }
 
 % vSLAM (Monocular SLAM based on particle filter)
-@INPROCEEDINGS{Karlsson:etal:ICRA05, 
-author={Karlsson, N. and Di Bernardo, E. and Ostrowski, J. and Goncalves, L. and Pirjanian, P. and Munich, M.E.}, 
-booktitle={Proceedings of the 2005 IEEE International Conference on Robotics and Automation}, 
-title={{The vSLAM Algorithm for Robust Localization and Mapping}}, 
-year={2005}, 
-pages={24-29}, 
-keywords={Kalman filter;Mixed proposal distribution;Particle filter;SLAM;vision;Cameras;Computer vision;Mobile robots;Navigation;Particle filters;Proposals;Robot sensing systems;Robot vision systems;Robustness;Simultaneous localization and mapping;Kalman filter;Mixed proposal distribution;Particle filter;SLAM;vision}, 
-doi={10.1109/ROBOT.2005.1570091}, 
+@INPROCEEDINGS{Karlsson:etal:ICRA05,
+author={Karlsson, N. and Di Bernardo, E. and Ostrowski, J. and Goncalves, L. and Pirjanian, P. and Munich, M.E.},
+booktitle={Proceedings of the 2005 IEEE International Conference on Robotics and Automation},
+title={{The vSLAM Algorithm for Robust Localization and Mapping}},
+year={2005},
+pages={24-29},
+keywords={Kalman filter;Mixed proposal distribution;Particle filter;SLAM;vision;Cameras;Computer vision;Mobile robots;Navigation;Particle filters;Proposals;Robot sensing systems;Robot vision systems;Robustness;Simultaneous localization and mapping;Kalman filter;Mixed proposal distribution;Particle filter;SLAM;vision},
+doi={10.1109/ROBOT.2005.1570091},
 month={April}
 }
 
 % Monocular SLAM based on particle filter
-@INPROCEEDINGS{Eade:Drummond:CVPR06, 
-author={Eade, E. and Drummond, Tom}, 
-booktitle={Proceedings of the IEEE Computer Society Conference on Computer Vision and Pattern Recognition}, 
-title={{Scalable Monocular SLAM}}, 
-year={2006}, 
-volume={1}, 
-pages={469-476}, 
-keywords={Bayesian methods;Cameras;Computer vision;Costs;Filtering;Navigation;Particle filters;Recursive estimation;Robots;Simultaneous localization and mapping}, 
-doi={10.1109/CVPR.2006.263}, 
-ISSN={1063-6919}, 
+@INPROCEEDINGS{Eade:Drummond:CVPR06,
+author={Eade, E. and Drummond, Tom},
+booktitle={Proceedings of the IEEE Computer Society Conference on Computer Vision and Pattern Recognition},
+title={{Scalable Monocular SLAM}},
+year={2006},
+volume={1},
+pages={469-476},
+keywords={Bayesian methods;Cameras;Computer vision;Costs;Filtering;Navigation;Particle filters;Recursive estimation;Robots;Simultaneous localization and mapping},
+doi={10.1109/CVPR.2006.263},
+ISSN={1063-6919},
 month={June}
 }
 
@@ -289,13 +579,6 @@ pages="298--372",
 isbn="978-3-540-44480-0",
 doi="10.1007/3-540-44480-7_21",
 url="http://dx.doi.org/10.1007/3-540-44480-7_21"
-}
-
-@book{hartley2003multiple,
-  title={Multiple view geometry in computer vision},
-  author={Hartley, Richard and Zisserman, Andrew},
-  year={2003},
-  publisher={Cambridge university press}
 }
 
 @article{levenberg1944method,
@@ -318,15 +601,15 @@ url="http://dx.doi.org/10.1007/3-540-44480-7_21"
 
 % Root Square SLAM: Primer paper que utiliza Bundle Adjustment para el problema de SLAM
 @article{Dellaert:Kaess:IJRR06,
-author = {Dellaert, Frank and Kaess, Michael}, 
+author = {Dellaert, Frank and Kaess, Michael},
 title = {{Square Root SAM: Simultaneous Localization and Mapping via Square Root Information Smoothing}},
-volume = {25}, 
-number = {12}, 
-pages = {1181-1203}, 
-year = {2006}, 
+volume = {25},
+number = {12},
+pages = {1181-1203},
+year = {2006},
 doi = {10.1177/0278364906072768},
-URL = {http://ijr.sagepub.com/content/25/12/1181.abstract}, 
-eprint = {http://ijr.sagepub.com/content/25/12/1181.full.pdf+html}, 
+URL = {http://ijr.sagepub.com/content/25/12/1181.abstract},
+eprint = {http://ijr.sagepub.com/content/25/12/1181.full.pdf+html},
 journal = {The International Journal of Robotics Research}
 }
 
@@ -347,29 +630,29 @@ journal = {The International Journal of Robotics Research}
 }
 
 % FrameSLAM
-@ARTICLE{Konolige:Agrawal:TRO08, 
-author={Konolige, K. and Agrawal, M.}, 
-journal={IEEE Transactions on Robotics}, 
-title={{FrameSLAM: From Bundle Adjustment to Real-Time Visual Mapping}}, 
-year={2008}, 
-month={Oct}, 
-volume={24}, 
-number={5}, 
-pages={1066-1077}, 
-keywords={SLAM (robots);computer vision;data visualisation;image registration;FrameSLAM;bundle adjustment;data association;frame-to-frame matching;indoor mapping techniques;local registration;real-time visual mapping;visual imagery;Visual mapping;visual SLAM;visual odometry}, 
-doi={10.1109/TRO.2008.2004832}, 
+@ARTICLE{Konolige:Agrawal:TRO08,
+author={Konolige, K. and Agrawal, M.},
+journal={IEEE Transactions on Robotics},
+title={{FrameSLAM: From Bundle Adjustment to Real-Time Visual Mapping}},
+year={2008},
+month={Oct},
+volume={24},
+number={5},
+pages={1066-1077},
+keywords={SLAM (robots);computer vision;data visualisation;image registration;FrameSLAM;bundle adjustment;data association;frame-to-frame matching;indoor mapping techniques;local registration;real-time visual mapping;visual imagery;Visual mapping;visual SLAM;visual odometry},
+doi={10.1109/TRO.2008.2004832},
 ISSN={1552-3098},}
 
 % Covisibility graph
-@INPROCEEDINGS{Strasdat:etal:ICCV11, 
-author={Strasdat, H. and Davison, AJ. and Montiel, J. M M and Konolige, K.}, 
-booktitle={IEEE International Conference on Computer Vision (ICCV)}, 
-title={Double window optimisation for constant time visual {SLAM}}, 
-year={2011}, 
-month={Nov}, 
-pages={2352-2359}, 
-keywords={SLAM (robots);image colour analysis;image sensors;pose estimation;robot vision;stereo image processing;RGB-D cameras;constant time visual SLAM;dense RGB-D object model building;double window optimisation;monocular cameras;pose-point constraints;pose-pose soft constraints;reconstruction;stereo cameras;visual sensor;Barium;Cameras;Measurement;Optimization;Simultaneous localization and mapping;Three dimensional displays;Visualization}, 
-doi={10.1109/ICCV.2011.6126517}, 
+@INPROCEEDINGS{Strasdat:etal:ICCV11,
+author={Strasdat, H. and Davison, AJ. and Montiel, J. M M and Konolige, K.},
+booktitle={IEEE International Conference on Computer Vision (ICCV)},
+title={Double window optimisation for constant time visual {SLAM}},
+year={2011},
+month={Nov},
+pages={2352-2359},
+keywords={SLAM (robots);image colour analysis;image sensors;pose estimation;robot vision;stereo image processing;RGB-D cameras;constant time visual SLAM;dense RGB-D object model building;double window optimisation;monocular cameras;pose-point constraints;pose-pose soft constraints;reconstruction;stereo cameras;visual sensor;Barium;Cameras;Measurement;Optimization;Simultaneous localization and mapping;Three dimensional displays;Visualization},
+doi={10.1109/ICCV.2011.6126517},
 ISSN={1550-5499}
 }
 
@@ -394,25 +677,9 @@ ISSN={1550-5499}
  keywords = {Bundle adjustment, EKF, Information filter, Monocular vision, SLAM, Stereo vision, Structure from motion}
 }
 
-% ORB-SLAM
-@article{Mur-Artal:etal:CoRR15,
-  author    = {Raul Mur{-}Artal and
-               J. M. M. Montiel and
-               Juan D. Tard{\'{o}}s},
-  title     = {{ORB-SLAM:} a Versatile and Accurate Monocular {SLAM} System},
-  journal   = {CoRR},
-  volume    = {abs/1502.00956},
-  year      = {2015},
-  url       = {http://arxiv.org/abs/1502.00956},
-  timestamp = {Mon, 02 Mar 2015 14:17:34 +0100},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/Mur-ArtalMT15},
-  bibsource = {dblp computer science bibliography, http://dblp.org},
-  doi={10.1109/TRO.2015.2463671}
-}
-
 % DBOW2 library
 @ARTICLE{Galvez:Tardos:TRO12,
-  author={Galvez-Lopez, Dorian and Tardos, J. D.}, 
+  author={Galvez-Lopez, Dorian and Tardos, J. D.},
   journal={IEEE Transactions on Robotics},
   title={{Bags of Binary Words for Fast Place Recognition in Image Sequences}},
   year={2012},
@@ -835,23 +1102,6 @@ month={Sept},}
   organization={IEEE}
 }
 
-% Level7 dataset
-@incollection{Murphy:etal:TAR13,
-  year={2013},
-  isbn={978-3-319-00064-0},
-  booktitle={Experimental Robotics},
-  volume={88},
-  series={Springer Tracts in Advanced Robotics},
-  editor={Desai, Jaydev P. and Dudek, Gregory and Khatib, Oussama and Kumar, Vijay},
-  doi={10.1007/978-3-319-00065-7_58},
-  title={{Experimental Comparison of Odometry Approaches}},
-  url={http://dx.doi.org/10.1007/978-3-319-00065-7_58},
-  publisher={Springer International Publishing},
-  author={Murphy, Liz and Morris, Timothy and Fabrizi, Ugo and Warren, Michael and Milford, Michael and Upcroft, Ben and Bosse, Michael and Corke, Peter},
-  pages={877-890},
-  language={English}
-}
-
 % g2o
 @inproceedings{grisetti2011g2o,
   title={g2o: A general framework for graph optimization},
@@ -895,7 +1145,7 @@ month={Sept},}
 @inproceedings{muja_flann_2009,
   author    = {Marius Muja and David G. Lowe},
   title     = {Fast Approximate Nearest Neighbors with Automatic Algorithm Configuration},
-  booktitle = {International Conference on Computer Vision Theory and Application 
+  booktitle = {International Conference on Computer Vision Theory and Application
                VISSAPP'09)},
   publisher = {INSTICC Press},
   year      = {2009},
@@ -965,15 +1215,6 @@ month={Sept},}
   organization={IEEE}
 }
 
-@inproceedings{pire2015stereo,
-  title={Stereo parallel tracking and mapping for robot localization},
-  author={Pire, Taih{\'u} and Fischer, Thomas and Civera, Javier and De Crist{\'o}foris, Pablo and Berlles, Julio Jacobo},
-  booktitle={Intelligent Robots and Systems (IROS), 2015 IEEE/RSJ International Conference on},
-  pages={1373--1378},
-  year={2015},
-  organization={IEEE}
-}
-
 @inproceedings{quigley2009ros,
   title={ROS: an open-source Robot Operating System},
   author={Quigley, Morgan and Conley, Ken and Gerkey, Brian and Faust, Josh and Foote, Tully and Leibs, Jeremy and Wheeler, Rob and Ng, Andrew Y},
@@ -994,27 +1235,6 @@ month={Sept},}
   pages={120--126},
   year={2000},
   publisher={M AND T PUBLISHING INC}
-}
-
-@article{durrant2006simultaneous,
-  title={Simultaneous localization and mapping: part I},
-  author={Durrant-Whyte, Hugh and Bailey, Tim},
-  journal={IEEE robotics \& automation magazine},
-  volume={13},
-  number={2},
-  pages={99--110},
-  year={2006},
-  publisher={IEEE}
-}
-
-@article{bailey2006simultaneous,
-  title={Simultaneous localization and mapping (SLAM): Part II},
-  author={Bailey, Tim and Durrant-Whyte, Hugh},
-  journal={IEEE Robotics \& Automation Magazine},
-  volume={13},
-  number={3},
-  pages={108--117},
-  year={2006}
 }
 
 @inproceedings{klein2007parallel,
@@ -1118,59 +1338,6 @@ month={Sept},}
   publisher={IEEE}
 }
 
-@inproceedings{kleeman2003advanced,
-  title={Advanced sonar and odometry error modeling for simultaneous localisation and map building},
-  author={Kleeman, Lindsay},
-  booktitle={Intelligent Robots and Systems, 2003.(IROS 2003). Proceedings. 2003 IEEE/RSJ International Conference on},
-  volume={1},
-  pages={699--704},
-  year={2003},
-  organization={IEEE}
-}
-
-@inproceedings{abrate2007experimental,
-  title={Experimental EKF-based SLAM for Mini-rovers with IR Sensors Only.},
-  author={Abrate, Fabrizio and Bona, Basilio and Indri, Marina},
-  booktitle={EMCR},
-  year={2007}
-}
-
-@inproceedings{cole2006using,
-  title={Using laser range data for 3D SLAM in outdoor environments},
-  author={Cole, David M and Newman, Paul M},
-  booktitle={Robotics and Automation, 2006. ICRA 2006. Proceedings 2006 IEEE International Conference on},
-  pages={1556--1563},
-  year={2006},
-  organization={IEEE}
-}
-
-@book{trucco1998introductory,
-  title={Introductory techniques for 3-D computer vision},
-  author={Trucco, Emanuele and Verri, Alessandro},
-  volume={201},
-  year={1998},
-  publisher={Prentice Hall Englewood Cliffs}
-}
-
-@book{ma2012invitation,
-  title={An invitation to 3-d vision: from images to geometric models},
-  author={Ma, Yi and Soatto, Stefano and Kosecka, Jana and Sastry, S Shankar},
-  volume={26},
-  year={2012},
-  publisher={Springer Science \& Business Media}
-}
-
-@inproceedings{li2009robust,
-  title={Robust single-view geometry and motion reconstruction},
-  author={Li, Hao and Adams, Bart and Guibas, Leonidas J and Pauly, Mark},
-  booktitle={ACM Transactions on Graphics (TOG)},
-  volume={28},
-  number={5},
-  pages={175},
-  year={2009},
-  organization={ACM}
-}
-
 @article{zhang2000flexible,
   title={A flexible new technique for camera calibration},
   author={Zhang, Zhengyou},
@@ -1188,15 +1355,6 @@ month={Sept},}
   booktitle={European conference on computer vision},
   pages={683--695},
   year={1996},
-  organization={Springer}
-}
-
-@inproceedings{fitzgibbon1998automatic,
-  title={Automatic camera recovery for closed or open image sequences},
-  author={Fitzgibbon, Andrew W and Zisserman, Andrew},
-  booktitle={European conference on computer vision},
-  pages={311--326},
-  year={1998},
   organization={Springer}
 }
 
@@ -1346,92 +1504,6 @@ month={Sept},}
   organization={IEEE}
 }
 
-@inproceedings{geiger2010efficient,
-  title={Efficient large-scale stereo matching},
-  author={Geiger, Andreas and Roser, Martin and Urtasun, Raquel},
-  booktitle={Asian conference on computer vision},
-  pages={25--38},
-  year={2010},
-  organization={Springer}
-}
-
-@inproceedings{seitz2006comparison,
-  title={A comparison and evaluation of multi-view stereo reconstruction algorithms},
-  author={Seitz, Steven M and Curless, Brian and Diebel, James and Scharstein, Daniel and Szeliski, Richard},
-  booktitle={Computer vision and pattern recognition, 2006 IEEE Computer Society Conference on},
-  volume={1},
-  pages={519--528},
-  year={2006},
-  organization={IEEE}
-}
-
-@inproceedings{kim2005gaussian,
-  title={Gaussian scale-space dense disparity estimation with anisotropic disparity-field diffusion},
-  author={Kim, Jangheon and Sikora, Thomas},
-  booktitle={3-D Digital Imaging and Modeling, 2005. 3DIM 2005. Fifth International Conference on},
-  pages={556--563},
-  year={2005},
-  organization={IEEE}
-}
-
-@inproceedings{strecha2002pde,
-  title={PDE-based multi-view depth estimation},
-  author={Strecha, Christoph and Van Gool, Luc},
-  booktitle={3D Data Processing Visualization and Transmission, 2002. Proceedings. First International Symposium on},
-  pages={416--425},
-  year={2002},
-  organization={IEEE}
-}
-
-@inproceedings{koch1998multi,
-  title={Multi viewpoint stereo from uncalibrated video sequences},
-  author={Koch, Reinhard and Pollefeys, Marc and Van Gool, Luc},
-  booktitle={European conference on computer vision},
-  pages={55--71},
-  year={1998},
-  organization={Springer}
-}
-
-@article{pollefeys2004visual,
-  title={Visual modeling with a hand-held camera},
-  author={Pollefeys, Marc and Van Gool, Luc and Vergauwen, Maarten and Verbiest, Frank and Cornelis, Kurt and Tops, Jan and Koch, Reinhard},
-  journal={International Journal of Computer Vision},
-  volume={59},
-  number={3},
-  pages={207--232},
-  year={2004},
-  publisher={Springer}
-}
-
-@INPROCEEDINGS{armesto2004encoder,
-author={L. Armesto and J. Tornero},
-booktitle={2004 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) (IEEE Cat. No.04CH37566)},
-title={SLAM based on Kalman filter for multi-rate fusion of laser and encoder measurements},
-year={2004},
-volume={2},
-pages={1860-1865 vol.2},
-keywords={Kalman filters;laser ranging;nonlinear filters;path planning;performance index;SLAM problem;encoder measurement;extended Kalman filter;laser measurement;multirate fusion;performance index;unscented Kalman filter;Acceleration;Fuses;Laser fusion;Laser radar;Particle measurements;Robot sensing systems;Sampling methods;Sensor systems;Simultaneous localization and mapping;Vehicle dynamics},
-doi={10.1109/IROS.2004.1389668},
-month={Sept},}
-
-@phdthesis{carlson2010mapping,
-  title={Mapping large, urban environments with gps-aided slam},
-  author={Carlson, Justin},
-  year={2010},
-  school={Georgia Institute of Technology}
-}
-
-@article{nutzi2011fusion,
-  title={Fusion of IMU and vision for absolute scale estimation in monocular SLAM},
-  author={N{\"u}tzi, Gabriel and Weiss, Stephan and Scaramuzza, Davide and Siegwart, Roland},
-  journal={Journal of intelligent \& robotic systems},
-  volume={61},
-  number={1},
-  pages={287--299},
-  year={2011},
-  publisher={Springer}
-}
-
 @article{delaunay1934sphere,
   title={Sur la sphere vide},
   author={Delaunay, Boris},
@@ -1548,75 +1620,8 @@ month={Sept},}
   publisher={IEEE}
 }
 
-@article{mur2015orb,
-  title={ORB-SLAM: a versatile and accurate monocular SLAM system},
-  author={Mur-Artal, Raul and Montiel, Jose Maria Martinez and Tardos, Juan D},
-  journal={IEEE Transactions on Robotics},
-  volume={31},
-  number={5},
-  pages={1147--1163},
-  year={2015},
-  publisher={IEEE}
-}
-
-@inproceedings{tan2013robust,
-  title={Robust monocular SLAM in dynamic environments},
-  author={Tan, Wei and Liu, Haomin and Dong, Zilong and Zhang, Guofeng and Bao, Hujun},
-  booktitle={Mixed and Augmented Reality (ISMAR), 2013 IEEE International Symposium on},
-  pages={209--218},
-  year={2013},
-  organization={IEEE}
-}
-
-# Dense diparity in a few secs
-@inproceedings{chakrabarti2015low,
-  title={Low-level vision by consensus in a spatial hierarchy of regions},
-  author={Chakrabarti, Ayan and Xiong, Ying and Gortler, Steven J and Zickler, Todd},
-  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
-  pages={4009--4017},
-  year={2015}
-}
-
-@inproceedings{yamaguchi2014efficient,
-  title={Efficient joint segmentation, occlusion labeling, stereo and flow estimation},
-  author={Yamaguchi, Koichiro and McAllester, David and Urtasun, Raquel},
-  booktitle={European Conference on Computer Vision},
-  pages={756--771},
-  year={2014},
-  organization={Springer}
-}
-
-@inproceedings{yamaguchi2013robust,
-  title={Robust monocular epipolar flow estimation},
-  author={Yamaguchi, Koichiro and McAllester, David and Urtasun, Raquel},
-  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
-  pages={1862--1869},
-  year={2013}
-}
-
 # Dense diparity in less than a sec
-@article{kendall2017end,
-  title={End-to-End Learning of Geometry and Context for Deep Stereo Regression},
-  author={Kendall, Alex and Martirosyan, Hayk and Dasgupta, Saumitro and Henry, Peter and Kennedy, Ryan and Bachrach, Abraham and Bry, Adam},
-  journal={arXiv preprint arXiv:1703.04309},
-  year={2017}
-}
 
-@inproceedings{luo2016efficient,
-  title={Efficient deep learning for stereo matching},
-  author={Luo, Wenjie and Schwing, Alexander G and Urtasun, Raquel},
-  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
-  pages={5695--5703},
-  year={2016}
-}
-
-@inproceedings{mayer2016large,
-  title={A large dataset to train convolutional networks for disparity, optical flow, and scene flow estimation},
-  author={Mayer, Nikolaus and Ilg, Eddy and Hausser, Philip and Fischer, Philipp and Cremers, Daniel and Dosovitskiy, Alexey and Brox, Thomas},
-  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
-  pages={4040--4048},
-  year={2016}
-}
 
 
 @article{sunyoto2004jaminan,
