--- a/tesis.lyx
+++ b/tesis.lyx
@@ -47,7 +47,7 @@
 \def\listtablename{\'Indice de tablas}
 }
 
-\input{math_preamble}
+\input{preamble}
 \end_preamble
 \options ruled,vlined
 \use_default_options true
