Rename "Trabajo relacionado" chapter file
Signed-off-by: Ariel D'Alessandro <ariel@vanguardiasur.com.ar>

--- a/tesis.lyx
+++ b/tesis.lyx
@@ -315,7 +315,7 @@ filename "introduccion.lyx"
 \begin_layout Standard
 \begin_inset CommandInset include
 LatexCommand input
-filename "estado_del_arte.lyx"
+filename "trabajo_relacionado.lyx"
 
 \end_inset
 
