--- a/tesis.lyx
+++ b/tesis.lyx
@@ -325,7 +325,7 @@ filename "trabajo_relacionado.lyx"
 \begin_layout Standard
 \begin_inset CommandInset include
 LatexCommand input
-filename "camara.lyx"
+filename "conceptos_basicos.lyx"
 
 \end_inset
 
