--- a/caratula.sty
+++ b/caratula.sty
@@ -229,7 +229,7 @@
     \ifsetuperror\errmessage{Faltan datos de la caratula! Ingresar 'h' para mas informacion.}\fi
     \thispagestyle{empty}
     \begin{center}
-    \ifx\Logoimagefile\relax\else\includegraphics{\Logoimagefile}\fi \hfill \includegraphics{logo_lcc.jpg}\\[1em]
+    \ifx\Logoimagefile\relax\else\includegraphics{\Logoimagefile}\fi \hfill \includegraphics{images/caratula/logo_lcc.jpg}\\[1em]
     \vspace*{\stretch{2}}
     {\LARGE\textbf{\Materia}}\\[1em]
     \ifx\Submateria\relax\else{\Large \Submateria}\\[0.5em]\fi
@@ -255,7 +255,7 @@
 %
     \thispagestyle{empty}
 
-    \ifx\Logoimagefile\relax\else\includegraphics{\Logoimagefile}\fi \hfill \includegraphics[scale=0.75]{logo_lcc.png}
+    \ifx\Logoimagefile\relax\else\includegraphics{\Logoimagefile}\fi \hfill \includegraphics[scale=0.75]{images/caratula/logo_lcc.png}
 
     \vspace*{.06 \textheight}
 
@@ -281,7 +281,7 @@
 %
     \begin{minipage}[t]{\textwidth}
         \begin{minipage}[t]{.55 \textwidth}
-            \includegraphics[scale=1.5]{logo_unr.jpg}
+            \includegraphics[scale=1.5]{images/caratula/logo_unr.jpg}
         \end{minipage}%%
         \begin{minipage}[b]{.50 \textwidth}
             \textbf{\textsf{Facultad de Ciencias Exactas, Ingenier\'ia y Agrimensura}} \\
